@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - add column run_priority to iseq_run_lane_metrics table
+
 release 2.4
  - change in use of cycles value; expected_cycles calculated from iseq_flowcell read lengths and length of tag sequence(s).
 
